--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -177,6 +177,9 @@ variant-selects {
 
 .product-form__input .form__label {
   padding-left: 0;
+  text-transform: uppercase;
+  letter-spacing: .3em;
+  color: rgba(var(--color-foreground));
 }
 
 fieldset.product-form__input .form__label {
@@ -195,7 +198,7 @@ fieldset.product-form__input .form__label {
   border: var(--variant-pills-border-width) solid rgba(var(--color-foreground), var(--variant-pills-border-opacity));
   background-color: rgb(var(--color-background));
   color: rgba(var(--color-foreground));
-  border-radius: var(--variant-pills-radius);
+  /* border-radius: var(--variant-pills-radius); */
   color: rgb(var(--color-foreground));
   display: inline-block;
   margin: 0.7rem 0.5rem 0.2rem 0;
@@ -339,8 +342,10 @@ a.product__text {
 }
 
 .product__title {
+  text-transform: uppercase;
   word-break: break-word;
   margin-bottom: 1.5rem;
+  color: rgba(var(--color-foreground));
 }
 
 .product__title > * {
