--- a/sections/slide.liquid
+++ b/sections/slide.liquid
@@ -40,24 +40,13 @@
   }
 
  .hero__title {
-    font-size: 35.0px;
+    font-size: 28px;
     color: #fff;
 }
 
-.hero__link {
-    margin-top: 7.5px;
-}
 .hero__link .btn {
   opacity: 0;
   transition: none;
-}
-@media only screen and (min-width: 769px) {
-  .hero__title {
-    font-size: 70px;
-  }
-  .hero__link {
-      margin-top: 15px;
-  }
 }
 
   .slideshow {
@@ -113,7 +102,7 @@
     opacity: 0;
     position: absolute;
     background: rgba(0,0,0,.6);
-    padding: 4rem 3.5rem;
+    padding: 0 2rem 2rem;
   }
   .animation-cropper {
     opacity: 0;
@@ -136,6 +125,18 @@
 
 }
 
+@media only screen and (min-width: 769px) {
+  .hero__title {
+    font-size: 70px;
+  }
+  .hero__link {
+      margin-top: 15px;
+  }
+
+  .text__wrap {
+    padding: 4rem 3.5rem;
+  }
+}
 </style>
 <div class="slideshow">
   <div class="wrap">
@@ -194,9 +195,6 @@
         crossFade: true
       },
       loop: true,
-      autoplay: {
-        delay: 5000,
-      },
       navigation: {
         nextEl: ".swiper-button-next",
         prevEl: ".swiper-button-prev",
