修改产品详情轮播图第二张变小，购买按钮上面添加免运费和库存充足

--- a/assets/base.css
+++ b/assets/base.css
@@ -3175,11 +3175,10 @@ details-disclosure > details {
   letter-spacing: .3em;
 }
 
-.grid {
+/* .grid {
   list-style: none;
   padding: 0;
   margin: 0 0 0 -22px;
-  /* text-align: center; */
   justify-content: center
 }
 
@@ -3195,7 +3194,7 @@ details-disclosure > details {
   display: inline-block;
   vertical-align: top;
   text-align: left;
-}
+} */
 
 .megamenu .grid__item {
   width: 20%;
