--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -11,6 +11,70 @@
   {% render 'buy-buttons', block: block, product: product, product_form_id: product_form_id, show_pickup_availability: true %}
 {% endcomment %}
 <div {{ block.shopify_attributes }}>
+  {% style %}
+    @keyframes inventory-pulse{
+      0%{
+        opacity:0.5;
+      }
+      to{
+        transform:scale(2.5);
+        opacity:0;
+      }
+    }
+    .sales-point {
+      display: block;
+      margin-bottom: 10px;
+    }
+    .icon-and-text {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+    }
+    .sales-point .icon {
+      position: relative;
+      width: 25px;
+      height: 25px;
+      margin-right: 10px;
+      flex: 0 0 auto;
+    }
+    .icon--inventory:before {
+      width: 9px;
+      height: 9px;
+      background: #54c63a;
+      border-radius: 9px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      content: "";
+      margin: 8px;
+    }
+    .icon--inventory:after, .icon--inventory:before {
+      width: 9px;
+      height: 9px;
+      background: #54c63a;
+      border-radius: 9px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      content: "";
+      margin: 8px;
+    }
+    .icon--inventory:before {
+      animation: inventory-pulse 2s linear infinite;
+    }
+  {% endstyle %}
+  <div class="sales-point">
+    <span class="icon-and-text">
+        <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-globe" viewBox="0 0 64 64"><defs><style>.a{fill:none;stroke:#000;stroke-width:2px}</style></defs><circle class="a" cx="32" cy="32" r="22"></circle><path class="a" d="M13 21h38M10 32h44M13 43h38M32 10c-12 8-12 37 0 44M32 10c12 8 12 37 0 44"></path></svg>
+      <span>Free worldwide shipping</span>
+    </span>
+  </div>
+  <div class="sales-point">
+    <span class="icon-and-text">
+      <span class="icon icon--inventory"></span>
+      <span data-product-inventory="" data-threshold="10">In stock, ready to ship</span>
+    </span>
+  </div>
   {%- if product != blank -%}
     <product-form class="product-form">
       <div class="product-form__error-message-wrapper" role="alert" hidden>
